# prodigal-agents

./: Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
examples/: simple_agent.py
