[tool.poetry]
name = "prodigal-agents"
version = "0.1.0"
description = "Core Agent SDK for Prodigal AI"
authors = ["Prodigal AI <contact@prodigalai.com>"]
packages = [{include = "prodigal_agents", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^24.0"
flake8 = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
